welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:59: error: not found: value reculer
  reculer()
  ^FlowerCase:61: error: not found: value reculer
  reculer(8)
  ^FlowerCase:63: error: not found: value reculer
  reculer(3)
  ^